Fix image align

--- a/content/theme/assets/stylesheets/homepage.css
+++ b/content/theme/assets/stylesheets/homepage.css
@@ -33,10 +33,9 @@
 
 .tx-hero {
   color: var(--md-primary-bg-color);
-  /* display: flex; */
-  margin: 32px 2.8rem;
+  margin: 15px;
   max-width: 100%;
-  /* justify-content: center; */
+  justify-content: center;
   padding: .1rem;
   text-align: center;
 }
@@ -58,9 +57,15 @@
   order: 2;
 }
 
+.tx-hero__title {
+  margin: 10px;
+  max-height: 15px;
+}
+
+
 .tx-hero__content {
   padding-bottom: 1rem;
-  margin: 0 auto;
+  margin: auto;
 }
 
 
@@ -69,7 +74,7 @@
   display: flex;
   height: auto;
   margin: 0 auto;
-  min-width: 300px;
+  min-width: 200px;
   width: 100%;
 }
 
